# frank

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  db.py  deps.py  main.py  models.py  schemas.py  seed.py
backend/app/core/: security.py
backend/app/routers/: advisor.py  auth.py  budgets.py  categories.py  goals.py  insights.py  nl.py  transactions.py
backend/app/services/: advisor.py  aggregates.py  llm.py  parser.py
backend/tests/: conftest.py  test_advisor.py  test_aggregates.py  test_auth.py  test_budgets_goals.py  test_healthz.py  test_isolation.py  test_nl_parse.py  test_transactions.py
docs/: technical-plan.md
docs/design/: design-system.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: advisor.ts  client.ts  hooks.ts  types.ts
frontend/src/auth/: AuthContext.ts  AuthProvider.tsx  ProtectedRoute.tsx
frontend/src/components/: BudgetBar.tsx  Capture.tsx  CategoryAvatar.tsx  Layout.tsx  Money.tsx  MonthSwitcher.tsx  VerdictStamp.tsx  bits.tsx  ui.tsx
frontend/src/lib/: categoryColor.ts  date.ts  money.test.ts  money.ts  verdict.ts
frontend/src/pages/: Advisor.tsx  Budgets.tsx  Goals.tsx  Home.tsx  Insight.tsx  Login.tsx  Onboarding.tsx  Register.tsx  Settings.tsx  Transactions.tsx
